--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,11 +19,11 @@ td:hover { background-color: #f0f0f0; cursor: pointer; }
 <h2>August 2023</h2>
 <table>
 <tr><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th><th>Sun</th></tr>
-<tr><td></td><td><span class='date'>1</span><br><span class='event'>Tasch, Montreux, Lausanne, Geneva</span></td><td><span class='date'>2</span><br><span class='event'>Geneva, Bern, Interlaken</span></td><td><span class='date'>3</span><br><span class='event'></span></td><td>4</td><td>5</td><td>6</td></tr>
-<tr><td>7</td><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td><td>13</td></tr>
-<tr><td>14</td><td>15</td><td>16</td><td>17</td><td>18</td><td>19</td><td>20</td></tr>
-<tr><td>21</td><td>22</td><td>23</td><td>24</td><td>25</td><td>26</td><td>27</td></tr>
-<tr><td>28</td><td>29</td><td>30</td><td>31</td><td></td><td></td><td></td></tr>
+<tr><td></td><td><span class='date'>1</span><br><span class='event'>Tasch, Montreux, Lausanne, Geneva</span></td><td><span class='date'>2</span><br><span class='event'>Geneva, Bern, Interlaken</span></td><td><span class='date'>3</span><br><span class='event'>Interlaken</span></td><td><span class='date'>4</span><br><span class='event'>Lucerne</span></td><td><span class='date'>5</span><br><span class='event'>Back to Bergamo, Milan by train</span></td><td><span class='date'>6</span><br><span class='event'></span></td></tr>
+<tr><td><span class='date'>7</span><br><span class='event'></span></td><td><span class='date'>8</span><br><span class='event'></span></td><td><span class='date'>9</span><br><span class='event'></span></td><td><span class='date'>10</span><br><span class='event'></span></td><td><span class='date'>11</span><br><span class='event'></span></td><td><span class='date'>12</span><br><span class='event'></span></td><td><span class='date'>13</span><br><span class='event'></span></td></tr>
+<tr><td><span class='date'>14</span><br><span class='event'></span></td><td><span class='date'>15</span><br><span class='event'></span></td><td><span class='date'>16</span><br><span class='event'></span></td><td><span class='date'>17</span><br><span class='event'></span></td><td><span class='date'>18</span><br><span class='event'></span></td><td><span class='date'>19</span><br><span class='event'></span></td><td><span class='date'>20</span><br><span class='event'></span></td></tr>
+<tr><td><span class='date'>21</span><br><span class='event'></span></td><td><span class='date'>22</span><br><span class='event'></span></td><td><span class='date'>23</span><br><span class='event'></span></td><td><span class='date'>24</span><br><span class='event'></span></td><td><span class='date'>25</span><br><span class='event'></span></td><td><span class='date'>26</span><br><span class='event'></span></td><td><span class='date'>27</span><br><span class='event'></span></td></tr>
+<tr><td><span class='date'>28</span><br><span class='event'></span></td><td><span class='date'>29</span><br><span class='event'></span></td><td><span class='date'>30</span><br><span class='event'></span></td><td>31</td><td></td><td></td><td></td></tr>
 </table>
 </body>
 </html>
