--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ td:hover { background-color: #f0f0f0; cursor: pointer; }
 <h2>August 2023</h2>
 <table>
 <tr><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th><th>Sun</th></tr>
-<tr><td></td><td id='day-1'><span class='date'>1</span><br><span class='event'>Tasch, Montreux, Lausanne, Geneva</span></td><td id='day-2'><span class='date'>2</span><br><span class='event'>Geneva, Bern, Interlaken</span></td><td id='day-3'><span class='date'>3</span><br><span class='event'>Interlaken</span></td><td id='day-4'><span class='date'>4</span><br><span class='event'>Lucerne</span></td><td id='day-5'><span class='date'>5</span><br><span class='event'>Back to Bergamo, Milan by train</span></td><td id='day-6'><span class='date'>6</span><br><span class='event'>Milan</span></td></tr>
-<tr><td id='day-7'><span class='date'>7</span><br><span class='event'>Milan to Varenna</span></td><td id='day-8'><span class='date'>8</span><br><span class='event'>Wedding in Cipressi</span></td><td id='day-9'><span class='date'>9</span><br><span class='event'>Varenna</span></td><td id='day-10'><span class='date'>10</span><br><span class='event'>Wedding in Cipressi</span></td><td id='day-11'><span class='date'>11</span><br><span class='event'>Varenna to Milan, then to Paris</span></td><td id='day-12'><span class='date'>12</span><br><span class='event'></span></td><td id='day-13'><span class='date'>13</span><br><span class='event'></span></td></tr>
-<tr><td id='day-14'><span class='date'>14</span><br><span class='event'></span></td><td id='day-15'><span class='date'>15</span><br><span class='event'>Disney Land</span></td><td id='day-16'><span class='date'>16</span><br><span class='event'>Disney Land</span></td><td id='day-17'><span class='date'>17</span><br><span class='event'>Disney Land</span></td><td id='day-18'><span class='date'>18</span><br><span class='event'></span></td><td id='day-19'><span class='date'>19</span><br><span class='event'></span></td><td id='day-20'><span class='date'>20</span><br><span class='event'></span></td></tr>
-<tr><td id='day-21'><span class='date'>21</span><br><span class='event'></span></td><td id='day-22'><span class='date'>22</span><br><span class='event'></span></td><td id='day-23'><span class='date'>23</span><br><span class='event'></span></td><td id='day-24'><span class='date'>24</span><br><span class='event'></span></td><td id='day-25'><span class='date'>25</span><br><span class='event'></span></td><td id='day-26'><span class='date'>26</span><br><span class='event'></span></td><td id='day-27'><span class='date'>27</span><br><span class='event'>Maria arrives</span></td></tr>
-<tr><td id='day-28'><span class='date'>28</span><br><span class='event'>Judita with kids to Lithuania</span></td><td id='day-29'><span class='date'>29</span><br><span class='event'>Wedding in Villa Balbianello</span></td><td id='day-30'><span class='date'>30</span><br><span class='event'>Back to Lithuania</span></td><td>31</td><td></td><td></td><td></td></tr>
+<tr><td></td><td id='day-1'><span class='date'>1</span><br><span class='event'>Tasch, Montreux, Lausanne, Geneva</span></td><td id='day-2'><span class='date'>2</span><br><span class='event'>Geneva, Bern, Interlaken</span></td><td id='day-3'><span class='date'>3</span><br><span class='event'>Interlaken</span></td><td id='day-4'><span class='date'>4</span><br><span class='event'>Lucerne</span></td><td id='day-5'><span class='date'>5</span><br><span class='event'>Back to Bergamo, Milan by train (Casa Vacanze Macchi)</span></td><td id='day-6'><span class='date'>6</span><br><span class='event'>Milan</span></td></tr>
+<tr><td id='day-7'><span class='date'>7</span><br><span class='event'>Milan to Varenna (Appartamento Contrada Vecchia)</span></td><td id='day-8'><span class='date'>8</span><br><span class='event'>Wedding in Cipressi</span></td><td id='day-9'><span class='date'>9</span><br><span class='event'>Varenna</span></td><td id='day-10'><span class='date'>10</span><br><span class='event'>Wedding in Cipressi</span></td><td id='day-11'><span class='date'>11</span><br><span class='event'>Varenna to Milan, then to Paris, then to Rouen (La colline bleue)</span></td><td id='day-12'><span class='date'>12</span><br><span class='event'>Bayeux (Appartement du Croissant)</span></td><td id='day-13'><span class='date'>13</span><br><span class='event'>Saint-Loup (Chambres d'Hotes La Maison Neuve)</span></td></tr>
+<tr><td id='day-14'><span class='date'>14</span><br><span class='event'>Gréez-sur-Roc (Chez Jean)</span></td><td id='day-15'><span class='date'>15</span><br><span class='event'>Disney Land</span></td><td id='day-16'><span class='date'>16</span><br><span class='event'>Disney Land</span></td><td id='day-17'><span class='date'>17</span><br><span class='event'>Disney Land to Paris (Au Passage des Marais)</span></td><td id='day-18'><span class='date'>18</span><br><span class='event'>Paris</span></td><td id='day-19'><span class='date'>19</span><br><span class='event'>Paris</span></td><td id='day-20'><span class='date'>20</span><br><span class='event'>Paris to Marseille (Appartement tout équipe Vieux Port 4 couchages)</span></td></tr>
+<tr><td id='day-21'><span class='date'>21</span><br><span class='event'>Marseille</span></td><td id='day-22'><span class='date'>22</span><br><span class='event'>Marseille to Nice (Une pépite Place Massena)</span></td><td id='day-23'><span class='date'>23</span><br><span class='event'>Nice</span></td><td id='day-24'><span class='date'>24</span><br><span class='event'>Nice</span></td><td id='day-25'><span class='date'>25</span><br><span class='event'>Nice</span></td><td id='day-26'><span class='date'>26</span><br><span class='event'>Nice to Marseille, Marseille to Bergamo</span></td><td id='day-27'><span class='date'>27</span><br><span class='event'>Maria arrives</span></td></tr>
+<tr><td id='day-28'><span class='date'>28</span><br><span class='event'>Judita with kids to Lithuania, We move to Bellagio (La Perla del Lario 51)</span></td><td id='day-29'><span class='date'>29</span><br><span class='event'>Wedding in Villa Balbianello</span></td><td id='day-30'><span class='date'>30</span><br><span class='event'>Back to Lithuania</span></td><td>31</td><td></td><td></td><td></td></tr>
 </table>
 <div id='selected-date-container'></div>
 <style>
@@ -36,30 +36,30 @@ document.getElementById('day-1').addEventListener('click', function() { updateSe
 document.getElementById('day-2').addEventListener('click', function() { updateSelectedDate('Geneva, Bern, Interlaken', 'August 2'); });
 document.getElementById('day-3').addEventListener('click', function() { updateSelectedDate('Interlaken', 'August 3'); });
 document.getElementById('day-4').addEventListener('click', function() { updateSelectedDate('Lucerne', 'August 4'); });
-document.getElementById('day-5').addEventListener('click', function() { updateSelectedDate('Back to Bergamo, Milan by train', 'August 5'); });
+document.getElementById('day-5').addEventListener('click', function() { updateSelectedDate('Back to Bergamo, Milan by train (Casa Vacanze Macchi)', 'August 5'); });
 document.getElementById('day-6').addEventListener('click', function() { updateSelectedDate('Milan', 'August 6'); });
-document.getElementById('day-7').addEventListener('click', function() { updateSelectedDate('Milan to Varenna', 'August 7'); });
+document.getElementById('day-7').addEventListener('click', function() { updateSelectedDate('Milan to Varenna (Appartamento Contrada Vecchia)', 'August 7'); });
 document.getElementById('day-8').addEventListener('click', function() { updateSelectedDate('Wedding in Cipressi', 'August 8'); });
 document.getElementById('day-9').addEventListener('click', function() { updateSelectedDate('Varenna', 'August 9'); });
 document.getElementById('day-10').addEventListener('click', function() { updateSelectedDate('Wedding in Cipressi', 'August 10'); });
-document.getElementById('day-11').addEventListener('click', function() { updateSelectedDate('Varenna to Milan, then to Paris', 'August 11'); });
-document.getElementById('day-12').addEventListener('click', function() { updateSelectedDate('', 'August 12'); });
-document.getElementById('day-13').addEventListener('click', function() { updateSelectedDate('', 'August 13'); });
-document.getElementById('day-14').addEventListener('click', function() { updateSelectedDate('', 'August 14'); });
+document.getElementById('day-11').addEventListener('click', function() { updateSelectedDate('Varenna to Milan, then to Paris, then to Rouen (La colline bleue)', 'August 11'); });
+document.getElementById('day-12').addEventListener('click', function() { updateSelectedDate('Bayeux (Appartement du Croissant)', 'August 12'); });
+document.getElementById('day-13').addEventListener('click', function() { updateSelectedDate('Saint-Loup (Chambres d'Hotes La Maison Neuve)', 'August 13'); });
+document.getElementById('day-14').addEventListener('click', function() { updateSelectedDate('Gréez-sur-Roc (Chez Jean)', 'August 14'); });
 document.getElementById('day-15').addEventListener('click', function() { updateSelectedDate('Disney Land', 'August 15'); });
 document.getElementById('day-16').addEventListener('click', function() { updateSelectedDate('Disney Land', 'August 16'); });
-document.getElementById('day-17').addEventListener('click', function() { updateSelectedDate('Disney Land', 'August 17'); });
-document.getElementById('day-18').addEventListener('click', function() { updateSelectedDate('', 'August 18'); });
-document.getElementById('day-19').addEventListener('click', function() { updateSelectedDate('', 'August 19'); });
-document.getElementById('day-20').addEventListener('click', function() { updateSelectedDate('', 'August 20'); });
-document.getElementById('day-21').addEventListener('click', function() { updateSelectedDate('', 'August 21'); });
-document.getElementById('day-22').addEventListener('click', function() { updateSelectedDate('', 'August 22'); });
-document.getElementById('day-23').addEventListener('click', function() { updateSelectedDate('', 'August 23'); });
-document.getElementById('day-24').addEventListener('click', function() { updateSelectedDate('', 'August 24'); });
-document.getElementById('day-25').addEventListener('click', function() { updateSelectedDate('', 'August 25'); });
-document.getElementById('day-26').addEventListener('click', function() { updateSelectedDate('', 'August 26'); });
+document.getElementById('day-17').addEventListener('click', function() { updateSelectedDate('Disney Land to Paris (Au Passage des Marais)', 'August 17'); });
+document.getElementById('day-18').addEventListener('click', function() { updateSelectedDate('Paris', 'August 18'); });
+document.getElementById('day-19').addEventListener('click', function() { updateSelectedDate('Paris', 'August 19'); });
+document.getElementById('day-20').addEventListener('click', function() { updateSelectedDate('Paris to Marseille (Appartement tout équipe Vieux Port 4 couchages)', 'August 20'); });
+document.getElementById('day-21').addEventListener('click', function() { updateSelectedDate('Marseille', 'August 21'); });
+document.getElementById('day-22').addEventListener('click', function() { updateSelectedDate('Marseille to Nice (Une pépite Place Massena)', 'August 22'); });
+document.getElementById('day-23').addEventListener('click', function() { updateSelectedDate('Nice', 'August 23'); });
+document.getElementById('day-24').addEventListener('click', function() { updateSelectedDate('Nice', 'August 24'); });
+document.getElementById('day-25').addEventListener('click', function() { updateSelectedDate('Nice', 'August 25'); });
+document.getElementById('day-26').addEventListener('click', function() { updateSelectedDate('Nice to Marseille, Marseille to Bergamo', 'August 26'); });
 document.getElementById('day-27').addEventListener('click', function() { updateSelectedDate('Maria arrives', 'August 27'); });
-document.getElementById('day-28').addEventListener('click', function() { updateSelectedDate('Judita with kids to Lithuania', 'August 28'); });
+document.getElementById('day-28').addEventListener('click', function() { updateSelectedDate('Judita with kids to Lithuania, We move to Bellagio (La Perla del Lario 51)', 'August 28'); });
 document.getElementById('day-29').addEventListener('click', function() { updateSelectedDate('Wedding in Villa Balbianello', 'August 29'); });
 document.getElementById('day-30').addEventListener('click', function() { updateSelectedDate('Back to Lithuania', 'August 30'); });
 </script>
