--- a/index.html
+++ b/index.html
@@ -41,5 +41,10 @@ document.addEventListener('click', function(event) {
 });
 function updateSelectedDate(event, date) { selectedDateContainer.innerHTML = `<p>Date: ${date}</p><p>Event: ${event}</p>`; }
 </script>
+
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619"></div>
+
+    
 </body>
 </html>
