--- a/index.html
+++ b/index.html
@@ -42,8 +42,14 @@ document.addEventListener('click', function(event) {
 function updateSelectedDate(event, date) { selectedDateContainer.innerHTML = `<p>Date: ${date}</p><p>Event: ${event}</p>`; }
 </script>
 
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-<div class="elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619"></div>
+   <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+</head>
+<body>
+    <!-- Container to center the widget -->
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+        <!-- Widget div -->
+        <div class="elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619"></div>
+    </div>
 
     
 </body>
