--- a/index.html
+++ b/index.html
@@ -44,12 +44,34 @@ function updateSelectedDate(event, date) { selectedDateContainer.innerHTML = `<p
 
    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </head>
-<body>
     <!-- Container to center the widget -->
-    <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-        <!-- Widget div -->
-        <div class="elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619"></div>
-    </div>
+  <style>
+  /* Set the body and html to fill the entire viewport */
+  body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+  }
+
+  /* Set the outer container to fill the entire viewport */
+  .outer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+
+  /* Set the widget div to take up 100% of its parent's height and width */
+  .elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619 {
+    width: 100%;
+    height: 100%;
+  }
+</style>
+
+<div class="outer-container">
+  <!-- Widget div -->
+  <div class="elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619"></div>
+</div>
 
     
 </body>
