--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@ function updateSelectedDate(event, date) { selectedDateContainer.innerHTML = `<p
 
    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </head>
-    <!-- Container to center the widget -->
-  <style>
+
+
+    <style>
   /* Set the body and html to fill the entire viewport */
   body, html {
     margin: 0;
@@ -65,6 +66,9 @@ function updateSelectedDate(event, date) { selectedDateContainer.innerHTML = `<p
   .elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619 {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 </style>
 
@@ -72,6 +76,7 @@ function updateSelectedDate(event, date) { selectedDateContainer.innerHTML = `<p
   <!-- Widget div -->
   <div class="elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619"></div>
 </div>
+
 
     
 </body>
