--- a/index.html
+++ b/index.html
@@ -43,7 +43,28 @@ function updateSelectedDate(event, date) { selectedDateContainer.innerHTML = `<p
 </script>
    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 
-  <div id="ww_9a02ea692019e" v='1.3' loc='auto' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://oneweather.org/johannesburg/14_days/" id="ww_9a02ea692019e_u" target="_blank">Weather forecast Johannesburg 14 days</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_9a02ea692019e"></script>
+    <style>
+  /* Set the body and html to fill the entire viewport */
+  body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+  }
+
+  /* Center the widget container horizontally and vertically */
+  .widget-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+</style>
+
+<div class="widget-container">
+  <div id="ww_9a02ea692019e" v='1.3' loc='auto' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://oneweather.org/johannesburg/14_days/" id="ww_9a02ea692019e_u" target="_blank">Weather forecast Johannesburg 14 days</a></div>
+</div>
+
+<script async src="https://app2.weatherwidget.org/js/?id=ww_9a02ea692019e"></script>
 
 
 </head>
