--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ td:hover { background-color: #f0f0f0; cursor: pointer; }
 <body>
 <h2>August 2023</h2>
 <table>
+<tr><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th><th>Sun</th></tr>
 <!-- ... your table content ... -->
 </table>
 <div id='selected-date-container'></div>
