--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@ td:hover { background-color: #f0f0f0; cursor: pointer; }
 <h2>August 2023</h2>
 <table>
 <tr><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th><th>Sun</th></tr>
-<!-- ... your table content ... -->
+<tr>
+<td></td>
+<td id='day-1'><span class='date'>1</span><br><span class='event'>Tasch, Montreux, Lausanne, Geneva</span></td>
+<td id='day-2'><span class='date'>2</span><br><span class='event'>Geneva, Bern, Interlaken</span></td>
+<td id='day-3'><span class='date'>3</span><br><span class='event'>Interlaken</span></td>
+<td id='day-4'><span class='date'>4</span><br><span class='event'>Lucerne</span></td>
+<td id='day-5'><span class='date'>5</span><br><span class='event'>Back to Bergamo, Milan by train (Casa Vacanze Macchi)</span></td>
+<td id='day-6'><span class='date'>6</span><br><span class='event'>Milan</span></td>
+</tr>
+<!-- ... Add other rows for the remaining days ... -->
 </table>
 <div id='selected-date-container'></div>
 <style>
