--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@ td:hover { background-color: #f0f0f0; cursor: pointer; }
 .event { font-size: 14px; font-weight: bold; color: #ff6600; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
 #selected-date-container { background-color: #fff; border: 2px solid #333; padding: 20px; font-size: 30px; font-weight: bold; color: #333; text-align: center; margin: 30px auto; width: 600px; }
 .widget-container { display: flex; justify-content: center; align-items: center; height: 100%; }
+
+#weather-widget-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  /* Add the desired width here (e.g., 800px) */
+  width: 800px;
+}
+
 </style>
 </head>
 <body>
@@ -49,32 +59,10 @@ function updateSelectedDate(event, date) { selectedDateContainer.innerHTML = `<p
 
 <style>
 
-/* Set the body and html to fill the entire viewport */
-  body, html {
-    margin: 0;
-    padding: 0;
-    width: 200%
-    height: 100%;
-  }
 
-  /* Center the widget container horizontally and vertically */
-  .widget-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 200%;
-    height: 100%;
-  }
-
-  /* Remove any margin or padding applied to the widget itself */
-  #ww_9a02ea692019e {
-    margin: 0;
-    padding: 0;
-  }
     
 </style>
-
-<div class="widget-container">
+<div id="weather-widget-container">
   <div id="ww_9a02ea692019e" v='1.3' loc='auto' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://oneweather.org/johannesburg/14_days/" id="ww_9a02ea692019e_u" target="_blank">Weather forecast Johannesburg 14 days</a></div>
 </div>
 
