--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ h2 { text-align: center; margin-top: 30px; }
 table { margin: 0 auto; border-collapse: collapse; }
 th, td { border: 1px solid #333; padding: 10px; text-align: center; }
 th { background-color: #333; color: white; }
-td { background-color: #fff; position: relative; height: 160px; width: 120px; }
+td { background-color: #fff; position: relative; height: 160px; width: 118px; }
 td:hover { background-color: #f0f0f0; cursor: pointer; }
 .date { font-size: 12px; position: absolute; top: 5px; left: 5px; }
 .event { font-size: 14px; font-weight: bold; color: #ff6600; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
@@ -42,7 +42,7 @@ document.addEventListener('click', function(event) {
         updateSelectedDate(eventText, day);
     }
 });
-function updateSelectedDate(event, date) { selectedDateContainer.innerHTML = `<p>Date: ${date}</p><p>Event: ${event}</p>`; }
+function updateSelectedDate(event, date) { selectedDateContainer.innerHTML = `<p>Date: ${date}</p><p> ${event}</p>`; }
 </script>
 
 <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
