--- a/index.html
+++ b/index.html
@@ -110,6 +110,24 @@ The Old Town's Gelato Shops: Treat the family to some delicious gelato from the 
 <tr><td id='day-28' data-info=''><span class='date'>28</span><br><span class='event'>Judita to Lithuania (9:30 - 13:00), Bellagio (La Perla del Lario 51)</span></td><td id='day-29' data-info=''><span class='date'>29</span><br><span class='event'>Wedding in Villa Balbianello</span></td><td id='day-30' data-info=''><span class='date'>30</span><br><span class='event'>Bergamo (15:00) - Ryga (18:40)</span></td><td>31</td><td></td><td></td><td></td></tr>
 </table>
 <div id='selected-date-container'></div>
+
+<style>
+  .widget-container {
+    margin: 0 auto;
+    max-width: 500px; /* You can adjust the max-width to your preference */
+  }
+</style>
+
+<div class="widget-container">
+  <div id="ww_9a02ea692019e" v='1.3' loc='auto' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://oneweather.org/johannesburg/14_days/" id="ww_9a02ea692019e_u" target="_blank">Weather forecast Johannesburg 14 days</a></div>
+</div>
+
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+
+<div class="widget-container">
+  <div id="ww_9a02ea692019e" v='1.3' loc='auto' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://oneweather.org/johannesburg/14_days/" id="ww_9a02ea692019e_u" target="_blank">Weather forecast Johannesburg 14 days</a></div>
+</div>
+    
 <div id='information-container'></div>
 <style>
 #selected-date-container {    background-color: #fff;    border: 2px solid #333;    padding: 20px;    font-size: 30px;    font-weight: bold;    color: #333;    text-align: center;    margin: 30px auto;    width: 600px;}
