--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ The Old Town's Gelato Shops: Treat the family to some delicious gelato from the 
 <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 
 <div class="widget-container">
-  <div id="ww_9a02ea692019e" v='1.3' loc='auto' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://oneweather.org/johannesburg/14_days/" id="ww_9a02ea692019e_u" target="_blank">Weather forecast Johannesburg 14 days</a></div>
+  <div id="ww_9a02ea692019e" v='1.3' loc='auto' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}</div>
 </div>
     
 <div id='information-container'></div>
@@ -150,26 +150,6 @@ function updateSelectedDate(event, date, info) {
     informationContainer.innerHTML = `<p>Information: ${info}</p>`;
 }
 </script>
-
-<style>
-  .widget-container {
-    margin: 0 auto;
-    max-width: 500px; /* You can adjust the max-width to your preference */
-  }
-</style>
-
-<div class="widget-container">
-  <div id="ww_9a02ea692019e" v='1.3' loc='auto' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://oneweather.org/johannesburg/14_days/" id="ww_9a02ea692019e_u" target="_blank">Weather forecast Johannesburg 14 days</a></div>
-</div>
-
-<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-
-<div class="widget-container">
-  <div id="ww_9a02ea692019e" v='1.3' loc='auto' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://oneweather.org/johannesburg/14_days/" id="ww_9a02ea692019e_u" target="_blank">Weather forecast Johannesburg 14 days</a></div>
-</div>
-
-<script async src="https://app2.weatherwidget.org/js/?id=ww_9a02ea692019e"></script>
-
 
 </body>
 </html>
