--- a/index.html
+++ b/index.html
@@ -140,10 +140,7 @@ function updateSelectedDate(event, date, info) {
 </style>
 
 <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-
-<div class="widget-container">
-  <div id="ww_9a02ea692019e" v='1.3' loc='auto' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}</div>
-</div>
+<div class="elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619"></div>
 
 
     
