--- a/index.html
+++ b/index.html
@@ -132,8 +132,10 @@ function updateSelectedDate(event, date, info) {
     informationContainer.innerHTML = `<p>Information: ${info}</p>`;
 }
 </script>
+
+
 <style>
-  .widget-container {
+  .elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619 {
     margin: 0 auto;
     max-width: 500px; /* You can adjust the max-width to your preference */
   }
@@ -141,6 +143,7 @@ function updateSelectedDate(event, date, info) {
 
 <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619"></div>
+
 
 
     
