--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ h2 { text-align: center; margin-top: 30px; }
 table { margin: 0 auto; border-collapse: collapse; }
 th, td { border: 1px solid #333; padding: 10px; text-align: center; }
 th { background-color: #333; color: white; }
-td { background-color: #333; position: relative; height: 140px; width: 100px; }
+td { background-color: #fff; position: relative; height: 140px; width: 100px; }
 td:hover { background-color: #f0f0f0; cursor: pointer; }
 .date { font-size: 12px; position: absolute; top: 5px; left: 5px; }
 .event { font-size: 14px; font-weight: bold; color: #ff6600; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
@@ -113,7 +113,7 @@ The Old Town's Gelato Shops: Treat the family to some delicious gelato from the 
 <div id='information-container'></div>
 <style>
 #selected-date-container {    background-color: #fff;    border: 2px solid #333;    padding: 20px;    font-size: 30px;    font-weight: bold;    color: #333;    text-align: center;    margin: 30px auto;    width: 600px;}
-#information-container {    background-color: #f0f0f0;    border: 2px solid #333;    padding: 20px;    font-size: 16px;    color: #333;    text-align: center;    margin: 30px auto;    width: 600px;}
+#information-container {    background-color: #fff;    border: 2px solid #333;    padding: 20px;    font-size: 16px;    color: #333;    text-align: center;    margin: 30px auto;    width: 600px;}
 </style>
 <script>
 var selectedDateContainer = document.getElementById('selected-date-container');
