--- a/index.html
+++ b/index.html
@@ -136,13 +136,15 @@ function updateSelectedDate(event, date, info) {
 
 <style>
   .elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619 {
+    display: block;
     margin: 0 auto;
-    max-width: 1000px; /* You can adjust the max-width to your preference */
+    max-width: 500px; /* You can adjust the max-width to your preference */
   }
 </style>
 
 <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-686fa0b1-7f55-4b46-afa0-c560156b1619"></div>
+
 
 
 
