--- a/index.html
+++ b/index.html
@@ -135,9 +135,10 @@ function updateSelectedDate(event, date, info) {
 
 <style>
   #ww_7c431fe60b27e {
-    display: block;
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
     max-width: 500px; /* You can adjust the max-width to your preference */
+    margin: 0 auto;
   }
 </style>
 
