--- a/index.html
+++ b/index.html
@@ -134,20 +134,21 @@ function updateSelectedDate(event, date, info) {
 </script>
 
 <style>
-  #ww_7c431fe60b27e {
+  body {
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+
+  #ww_7c431fe60b27e {
     max-width: 500px; /* You can adjust the max-width to your preference */
-    margin: 0 auto;
   }
 </style>
 
 <div id="ww_7c431fe60b27e" v='1.3' loc='id' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://oneweather.org/fr/paris/25_days/" id="ww_7c431fe60b27e_u" target="_blank">Meteo Paris 25 jours</a></div>
 <script async src="https://app2.weatherwidget.org/js/?id=ww_7c431fe60b27e"></script>
 
-
-
-
-    
 </body>
 </html>
