--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@ function updateSelectedDate(event, date, info) {
   }
 </style>
 
-<div id="ww_7c431fe60b27e" v='1.3' loc='id' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://oneweather.org/fr/paris/25_days/" id="ww_7c431fe60b27e_u" target="_blank">Meteo Paris 25 jours</a></div>
-<script async src="https://app2.weatherwidget.org/js/?id=ww_7c431fe60b27e"></script>
+<div id="ww_7c431fe60b27e" v='1.3' loc='auto' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://oneweather.org/johannesburg/14_days/" id="ww_7c431fe60b27e_u" target="_blank">Weather 14 days Johannesburg</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_7c431fe60b27e"></script>
 
 </body>
 </html>
