--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ td:hover { background-color: #f0f0f0; cursor: pointer; }
 <h2>August 2023</h2>
 <table>
 <tr><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th><th>Sun</th></tr>
+
+<tr><td id='day-28' data-info=''><span class='date'>28</span><br><span class='event'>Judita to Lithuania (9:30 - 13:00), Bellagio (La Perla del Lario 51)</span></td></td></tr>
+
 <tr><td></td><td id='day-1' data-info='DOMAINE LA COLOMBIÈRE
 166 Chemin Neuf
 74160 NEYDENS - France'><span class='date'>1</span><br><span class='event'>Tasch, Geneva</span></td><td id='day-2' data-info='Camping MANOR FARM 1
