--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@ td:hover { background-color: #f0f0f0; cursor: pointer; }
 
 <tr><td id='day-28' data-info=''><span class='date'>28</span><br><span class='event'>Judita to Lithuania (9:30 - 13:00), Bellagio (La Perla del Lario 51)</span></td></td></tr>
 
-<tr><td></td><td id='day-1' data-info='DOMAINE LA COLOMBIÈRE
-166 Chemin Neuf
-74160 NEYDENS - France'><span class='date'>1</span><br><span class='event'>Tasch, Geneva</span></td><td id='day-2' data-info='Camping MANOR FARM 1
+<tr><td id='day-31' data-info=''><span class='date'>31</span><br><span class='event'>CAMPING TÄSCH, Uferstraße, 3929 Täsch, Wallis Switzerland </span><td></td><td id='day-1' data-info='DOMAINE LA COLOMBIÈRE, 166 Chemin Neuf, 74160 NEYDENS - France'><span class='date'>1</span><br><span class='event'>Tasch, Geneva</span></td><td id='day-2' data-info='Camping MANOR FARM 1
 Seestrasse 201
 3800 Interlaken-Thunersee
 Switzerland'><span class='date'>2</span><br><span class='event'>Geneva, Bern, Interlaken</span></td><td id='day-3' data-info=''><span class='date'>3</span><br><span class='event'>Interlaken</span></td><td id='day-4' data-info=''><span class='date'>4</span><br><span class='event'>Lucerne</span></td><td id='day-5' data-info=''><span class='date'>5</span><br><span class='event'>Back to Bergamo, Milan by train (Casa Vacanze Macchi)</span></td><td id='day-6' data-info='Duomo: https://ticket.duomomilano.it/en/biglietti/'><span class='date'>6</span><br><span class='event'>Milan</span></td></tr>
