--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ td:hover { background-color: #f0f0f0; cursor: pointer; }
 <table>
 <tr><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th><th>Sun</th></tr>
 
-<tr><td id='day-30' data-info=''><span class='date'>30</span><br><span class='event'>CAMPING TÄSCH, Uferstraße, 3929 Täsch, Wallis Switzerland </span></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td id='day-29' data-info=''><span class='date'>29</span><br><span class='event'>Lakeview Cannobio Camp & Resort / formerly Camping Bosco, Strada Nazionale 3, 28822 - Cannobio / Italy, Phone: +39 0323 739647 (out of season only eMail), info@lakeview.eu</span></td><td id='day-30' data-info=''><span class='date'>30</span><br><span class='event'>CAMPING TÄSCH, Uferstraße, 3929 Täsch, Wallis Switzerland </span></td></tr>
 
 <tr><td id='day-31' data-info=''><span class='date'>31</span><br><span class='event'>CAMPING TÄSCH, Uferstraße, 3929 Täsch, Wallis Switzerland </span></td><td id='day-1' data-info='DOMAINE LA COLOMBIÈRE, 166 Chemin Neuf, 74160 NEYDENS - France'><span class='date'>1</span><br><span class='event'>Tasch, Geneva</span></td><td id='day-2' data-info='Camping MANOR FARM 1
 Seestrasse 201
