--- a/index.html
+++ b/index.html
@@ -43,35 +43,8 @@ Visit the Old Town and Play "City Explorers": Explore the charming Old Town of L
 
 Plan a Picnic and Visit a Local Market: Pack a delicious picnic with French treats and head to one of the public squares in Le Mans. Enjoy a relaxing meal outdoors, and if you happen to be in Le Mans on a Wednesday or Sunday morning, visit the local markets. The Marché des Jacobins, for example, is a lively market where you can find fresh produce, local specialties, and unique artisan products. Let the kids help choose some treats for the picnic and experience the vibrant market atmosphere.
 
-Bonus Activity: Visit the Labyrinthe Végétal (Vegetable Maze) in Guécelard, just a short drive from Le Mans. This maze is made up of plants and provides a fun and challenging activity for the whole family. The kids can navigate through the labyrinth, and it's a great way to spend time together outdoors.'><span class='date'>14</span><br><span class='event'>Gréez-sur-Roc (Chez Jean)</span></td><td id='day-15' data-info=''><span class='date'>15</span><br><span class='event'>Disney Land</span></td><td id='day-16' data-info=''><span class='date'>16</span><br><span class='event'>Disney Land</span></td><td id='day-17' data-info=''><span class='date'>17</span><br><span class='event'>Disney Land to Paris (Au Passage des Marais)</span></td><td id='day-18' data-info='Morning:
-
-Eiffel Tower: Start early and head to the Eiffel Tower. Arriving early in the morning will help you avoid the biggest crowds. You can take the stairs or elevator to the second floor for stunning views of Paris.
-
-Trocadéro Gardens: After visiting the Eiffel Tower, stroll over to the Trocadéro Gardens across the Seine River. It's a beautiful spot for family photos with the Eiffel Tower in the background.
-
-Lunchtime:
-3. Grab a Picnic: Consider grabbing some delicious French pastries and sandwiches from local bakeries or markets and have a picnic at a nearby park. The Champ de Mars park near the Eiffel Tower is a great option.
-
-Afternoon:
-4. Seine River Cruise: Take a relaxing Seine River cruise to see many iconic landmarks, including Notre-Dame Cathedral, Musée d'Orsay, and Louvre Museum. Opt for an open-top boat for the best views.
-
-Louvre Museum (Outside Only): Visit the Louvre in the late afternoon, but consider only exploring the exterior and the courtyard with the glass pyramid. Entering the museum may take a lot of time, so save an in-depth visit for another trip.'><span class='date'>18</span><br><span class='event'>Paris</span></td><td id='day-19' data-info='Morning:
-
-Notre-Dame Cathedral: Start your day with a visit to Notre-Dame Cathedral. As of my last update in 2021, the interior may still be closed for renovation, but the exterior and the surroundings are worth seeing.
-
-Île de la Cité: Explore the picturesque Île de la Cité, where Notre-Dame is located. Enjoy the charming streets and take a walk along the Seine.
-
-Lunchtime:
-3. Latin Quarter: Head to the Latin Quarter for lunch, a vibrant neighborhood with many restaurants and cafés. It's a lively area with a bohemian atmosphere.
-
-Afternoon:
-4. Sainte-Chapelle: Visit Sainte-Chapelle, a stunning Gothic chapel known for its breathtaking stained glass windows. It's a relatively quick visit, and the kids may be fascinated by the colors of the glass.
-
-Montmartre: Take a taxi or public transportation to Montmartre. Wander through the artistic streets, visit the Basilique du Sacré-Cœur for beautiful views of the city, and enjoy street performances.
-Evening:
-6. Bateaux-Mouches Evening Cruise: End your second day with an evening Bateaux-Mouches cruise on the Seine River. It offers a different perspective of the city, as many landmarks are illuminated at night.
-
-By starting early and being mindful of peak hours, you can make the most of your time in Paris and explore the city's top attractions with your family at a comfortable pace. Remember to check for any updated information or changes in operating hours for the attractions, especially in light of any events or developments that may have occurred after my last update in 2021. Enjoy your time in the City of Light!'><span class='date'>19</span><br><span class='event'>Paris</span></td><td id='day-20' data-info='Train ticket: https://www.thetrainline.com/book/results?origin=69b59b70a73b72302eff45627aeef377&destination=1846c9474c93ab658d867aeaabcd4fef&outwardDate=2023-08-20T10%3A00%3A00&outwardDateType=departAfter&journeySearchType=single&passengers%5B%5D=1996-07-25%7C8e34745f-c07e-4424-bb69-2d5d6530c241&passengers%5B%5D=2017-07-25%7C36b015b2-c006-457e-b51e-3879b114fb22&passengers%5B%5D=2012-07-25%7C2bc71fff-9f89-4de0-a3a2-c4f77f22621d&passengers%5B%5D=1996-07-25%7Cc24719b8-cf32-4058-9edf-81aaa254cc98&directSearch=false&selectedOutward=HO28SB0cy9M%3D%3AVI82gd8RYvk%3D%3AStandard'><span class='date'>20</span><br><span class='event'>Paris to Marseille (Appartement tout équipe Vieux Port 4)</span></td></tr>
+Bonus Activity: Visit the Labyrinthe Végétal (Vegetable Maze) in Guécelard, just a short drive from Le Mans. This maze is made up of plants and provides a fun and challenging activity for the whole family. The kids can navigate through the labyrinth, and it's a great way to spend time together outdoors.'><span class='date'>14</span><br><span class='event'>Gréez-sur-Roc (Chez Jean)</span></td><td id='day-15' data-info=''><span class='date'>15</span><br><span class='event'>Disney Land</span></td><td id='day-16' data-info=''><span class='date'>16</span><br><span class='event'>Disney Land</span></td><td id='day-17' data-info=''><span class='date'>17</span><br><span class='event'>Disney Land to Paris (Au Passage des Marais)</span></td><td id='day-18' data-info='Efelis: https://mail.google.com/mail/u/0/#label/ATOSTOGOS%2FFrance/FMfcgzGtwWFTBTJcZWKqSrVWJhqvnklc?projector=1&messagePartId=0.2 
+Luvras: https://www.ticketlouvre.fr/louvre/b2c/index.cfm/pdf.get/ucode/LOUVRE_B2C-ENZXDKT2-7F2QF72'><span class='date'>18</span><br><span class='event'>Paris, Eifel Tower (10:30), Luvras (18:00)</span></td><td id='day-19' data-info='All Access Passport ticket including Gardens Show on Aug 19, 2023 at 11:30 AM: https://mail.google.com/mail/u/0/#search/Versailles/FMfcgzGtwWFTBVQXsqNzGvKQwsnKmXfh'><span class='date'>19</span><br><span class='event'>Paris, Versalis</span></td><td id='day-20' data-info='Train ticket: https://www.thetrainline.com/book/results?origin=69b59b70a73b72302eff45627aeef377&destination=1846c9474c93ab658d867aeaabcd4fef&outwardDate=2023-08-20T10%3A00%3A00&outwardDateType=departAfter&journeySearchType=single&passengers%5B%5D=1996-07-25%7C8e34745f-c07e-4424-bb69-2d5d6530c241&passengers%5B%5D=2017-07-25%7C36b015b2-c006-457e-b51e-3879b114fb22&passengers%5B%5D=2012-07-25%7C2bc71fff-9f89-4de0-a3a2-c4f77f22621d&passengers%5B%5D=1996-07-25%7Cc24719b8-cf32-4058-9edf-81aaa254cc98&directSearch=false&selectedOutward=HO28SB0cy9M%3D%3AVI82gd8RYvk%3D%3AStandard'><span class='date'>20</span><br><span class='event'>Paris to Marseille (Appartement tout équipe Vieux Port 4)</span></td></tr>
 <tr><td id='day-21' data-info='Morning:
 
 Vieux-Port (Old Port): Start your day at the Vieux-Port, the historic and bustling old port of Marseille. Take a leisurely stroll along the harbor, and you can see colorful fishing boats, yachts, and enjoy the vibrant atmosphere.
